switched from minAreaRect to convexHulls